5.53_01
    [[ Bug Fixes ]]
    - Removed duplicate NAME macro definition
    - Fixed makemakerdflt target for VMS
    * bleadperl@11460 introduced a bug with recursive Makefile.PL's not
      having '.' in @INC.  PDL should build now.
    * MANIFEST.SKIP only working on file names, not full relative paths.
      Only since 5.51_01  (RT 413)

5.52_01 Tue Mar 26 00:24:26 EST 2002
    [[ Bug Fixes ]]
    * ActivePerl 5.6.1/build 631 now 100%
    - Fixed some SelfLoader warnings
    * ExtUtils::MM_Win32 not subclassed off of ExtUtils::MM_Any properly
    - Bug in local $ENV{FOO} was causing failures in MM_Win32 tests.
      Compensating for the bug.
    - $Config{prefixexp} is sometimes bad on ActivePerl, compensating
    - Accidentally left htmlifypods tests in MM_Win32 tests

    [[ Doc Changes ]]
    - Expanding Known Good list
    - Adding Known Programs to README

5.51_01 Mon Mar 18 01:37:02 EST 2002
    [[ API Changes ]]
    - Removing xsubpp and typemap from the distribution.  These are not
      Perl version independent files and should not be upgraded.
    - Removing ExtUtils::Embed.  Version specific module and should
      not be updated.
    - Removing ExtUtils::Constant.  Not directly tied to MakeMaker.
      Will be distributed seperately by Nick Clark.

    [[ New Features ]]
    * realclean now deletes 'dist' directory.

    [[ Bug Fixes ]]
    * Fixing ExtUtils::Installed for VMS
    * Fixed it so MakeMaker can build itself without needing an eariler
      version installed
    * Fixed ExtUtils::Installed so packlists work on VMS
    * ExtUtils::MM_VMS test had a stupid typo that prevented most
      of the tests from running.
    - Fixing VMS so 'mmk' is always 'mmk all' (bleadperl 15218)
    - ExtUtils::MM_Any->catfile was calling catdir
    - Added Ken William's "speed up ExtUtils::Manifest" patch.
    - Added Nick Clark's return value of manifest routines patch
      (bleadperl@14978)