@@ -6,6 +6,7 @@
       having '.' in @INC.  PDL should build now.
     * MANIFEST.SKIP only working on file names, not full relative paths.
       Only since 5.51_01  (RT 413)
+    * make test TEST_VERBOSE=1 was busted by 5.50_01
 
 5.52_01 Tue Mar 26 00:24:26 EST 2002
     [[ Bug Fixes ]]
@@ -141,7 +142,7 @@
 5.48_04 Mon Jan 21 19:28:38 EST 2002
     - No longer requiring Test::More
     - Now tested to work with a clean 5.6.1
-    - Stripped out $Revision: 1.22 $ based $VERSIONs.
+    - Stripped out $Revision: 1.23 $ based $VERSIONs.
     - Rolled in patches from p5p, vmsperl & VOS (14325, 14338, 14360, 14364)
     * hint files now run in a safer context.  Only $self is available.
     - ExtUtils::testlib now provides absolute paths into @INC.
